# greeder

./: Cargo.toml  README.md  rctl
common/: Cargo.toml  lib.rs  schema.rs  types.rs
fetcher/: download.rs  main.rs
migrations/003_create_user/: up.sql
migrations/004_create_subscription/: down.sql  up.sql
server/: Cargo.toml  feed.rs  hb_helpers.rs  main.rs  models.rs
server/controllers/: entry.rs  feed.rs  index.rs  management.rs  mod.rs  pages.rs
server/guards/: user.rs
server/static/css/: style.css
server/static/js/: feed.js  http.js  index.js  management.js  templater.js
server/templates/: entry.html.hbs  error.html.hbs  feed.html.hbs  index.html.hbs  management.html.hbs
src/: main.rs
