[package]
name = "server"
version = "0.0.0"
publish = false

[[bin]]
name = "server"
path = "main.rs"

[dependencies]
common = { path = "../common" }
log = "^0.3.7"
serde= "^0.9.12"
serde_derive = "^0.9.12"
rocket = "^0.2.4"
rocket_codegen = "^0.2.4"

[dependencies.rocket_contrib]
version = "^0.2.4"
default-features = false
features = ["handlebars_templates"]
